{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 69,
  "lineage": "0cbf8d1b-be97-d6ae-0233-9898b1eb2c6b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:security-group/sg-0cde9be13c87ace3f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0cde9be13c87ace3f",
            "ingress": [],
            "name": "Digital-asset-collections-cluster-20240503223942414500000007",
            "name_prefix": "Digital-asset-collections-cluster-",
            "owner_id": "456869424076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-cluster"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:security-group/sg-0ed20f962be5864e0",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ed20f962be5864e0",
            "ingress": [],
            "name": "Digital-asset-collections-node-20240503223942608700000008",
            "name_prefix": "Digital-asset-collections-node-",
            "owner_id": "456869424076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-node",
              "kubernetes.io/cluster/Digital-asset-collections": "owned"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-node",
              "kubernetes.io/cluster/Digital-asset-collections": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1711403665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cde9be13c87ace3f",
            "security_group_rule_id": "sgr-01f64740e73bab4e1",
            "self": false,
            "source_security_group_id": "sg-0ed20f962be5864e0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1878812805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-0fb100c19ac510fd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1312107561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-0f95681aec4e1012f",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3578620372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-01c55e8eea9731049",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-470748738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-0c35d61829a8b2118",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-257110627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-065f10d112f36c060",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1811022248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-067d18ae1cc6f5523",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3381596109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-02fe496b386466244",
            "self": false,
            "source_security_group_id": "sg-0cde9be13c87ace3f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-850236107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-080f49378717da631",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-162703315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-0901258129a5bea57",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2917991484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ed20f962be5864e0",
            "security_group_rule_id": "sgr-0732d2651f72fd020",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:network-acl/acl-0362c381a15874bc2",
            "default_network_acl_id": "acl-0362c381a15874bc2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0362c381a15874bc2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "456869424076",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:route-table/rtb-02fdbfb83cbcf561a",
            "default_route_table_id": "rtb-02fdbfb83cbcf561a",
            "id": "rtb-02fdbfb83cbcf561a",
            "owner_id": "456869424076",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:security-group/sg-0d0dd739691cdd6db",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d0dd739691cdd6db",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "456869424076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-default"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc/vpc-0b1a9a504aa8dfff7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-07b733ff2b0c4f186",
            "default_route_table_id": "rtb-08b001e860e21700a",
            "default_security_group_id": "sg-0b812efafb90db995",
            "dhcp_options_id": "dopt-09888af0f6737adeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0b1a9a504aa8dfff7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b001e860e21700a",
            "owner_id": "456869424076",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "default"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:route-table/rtb-09c705f7c774aadd6",
            "id": "rtb-09c705f7c774aadd6",
            "owner_id": "456869424076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:route-table/rtb-029b8e92e6c9f7915",
            "id": "rtb-029b8e92e6c9f7915",
            "owner_id": "456869424076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1b"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:route-table/rtb-062194879dea5bf37",
            "id": "rtb-062194879dea5bf37",
            "owner_id": "456869424076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1c"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daeb272f68014c81",
            "route_table_id": "rtb-09c705f7c774aadd6",
            "subnet_id": "subnet-044af8b78d03f6c1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767ecdc3172d1d2d",
            "route_table_id": "rtb-029b8e92e6c9f7915",
            "subnet_id": "subnet-00eb67139d2c4b36d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb1d86bcbd587d4",
            "route_table_id": "rtb-062194879dea5bf37",
            "subnet_id": "subnet-00732b2df566fd6b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:subnet/subnet-044af8b78d03f6c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044af8b78d03f6c1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456869424076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1a"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:subnet/subnet-00eb67139d2c4b36d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb67139d2c4b36d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456869424076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1b"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1b"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:subnet/subnet-00732b2df566fd6b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00732b2df566fd6b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456869424076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1c"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-private-us-east-1c"
            },
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc/vpc-084a3930bf1dcdb2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0362c381a15874bc2",
            "default_route_table_id": "rtb-02fdbfb83cbcf561a",
            "default_security_group_id": "sg-0d0dd739691cdd6db",
            "dhcp_options_id": "dopt-09888af0f6737adeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084a3930bf1dcdb2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fdbfb83cbcf561a",
            "owner_id": "456869424076",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:security-group/sg-0609919d7c97f45f0",
            "description": "VPC endpoint security group",
            "egress": [],
            "id": "sg-0609919d7c97f45f0",
            "ingress": [],
            "name": "Digital-asset-collections-vpc-endpoints-20240503223942641200000009",
            "name_prefix": "Digital-asset-collections-vpc-endpoints-",
            "owner_id": "456869424076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-vpc-endpoints-"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-vpc-endpoints-"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTPS from VPC",
            "from_port": 443,
            "id": "sgrule-4077291865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0609919d7c97f45f0",
            "security_group_rule_id": "sgr-0b46f74b8e9d3d216",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc_endpoints.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "autoscaling",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-0c96f082942edfa54",
            "dns_entry": [
              {
                "dns_name": "vpce-0c96f082942edfa54-avfvqwo3.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c96f082942edfa54-avfvqwo3-us-east-1a.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c96f082942edfa54-avfvqwo3-us-east-1c.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c96f082942edfa54-avfvqwo3-us-east-1b.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "autoscaling.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09038391GHUT8O88WLZZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c96f082942edfa54",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00f4cbe1a46bc4d7e",
              "eni-0390786bb6586925c",
              "eni-08d4e72137e581e2d"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.autoscaling",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-autoscaling"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-autoscaling"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-04447a16fd70d9127",
            "dns_entry": [
              {
                "dns_name": "vpce-04447a16fd70d9127-u3t1jfpl.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04447a16fd70d9127-u3t1jfpl-us-east-1c.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04447a16fd70d9127-u3t1jfpl-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04447a16fd70d9127-u3t1jfpl-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09038182CNB821GX0I73"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z00247241QWQT9VGKQEV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04447a16fd70d9127",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01caec43f748d7baf",
              "eni-05c1c1095aac60e48",
              "eni-0bb83a6de366e2409"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ec2"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ec2"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-02c39fb1fe694050b",
            "dns_entry": [
              {
                "dns_name": "vpce-02c39fb1fe694050b-x0ymmado.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c39fb1fe694050b-x0ymmado-us-east-1c.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c39fb1fe694050b-x0ymmado-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c39fb1fe694050b-x0ymmado-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09571212NMIDP18F8LT6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02c39fb1fe694050b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0dc7e8c448e8f8887",
              "eni-0de8b1f0e4707e89e",
              "eni-0e324e37e148d505a"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ec2messages"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ec2messages"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-06202ff2be11f246c",
            "dns_entry": [
              {
                "dns_name": "vpce-06202ff2be11f246c-in3ymt6r.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06202ff2be11f246c-in3ymt6r-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06202ff2be11f246c-in3ymt6r-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06202ff2be11f246c-in3ymt6r-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09547602U1V7333CC89L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06202ff2be11f246c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-060fc70062f20407c",
              "eni-0774fa8a36c11c668",
              "eni-0e37c845bcdc566ed"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ecr.api"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ecr.api"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-08065d0b9c25f90ea",
            "dns_entry": [
              {
                "dns_name": "vpce-08065d0b9c25f90ea-rbd0q2dm.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08065d0b9c25f90ea-rbd0q2dm-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08065d0b9c25f90ea-rbd0q2dm-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08065d0b9c25f90ea-rbd0q2dm-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z095619526TZQ6BRF8PH3"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z095619526TZQ6BRF8PH3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08065d0b9c25f90ea",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-014258dce66f41903",
              "eni-0aa83655a7f37f254",
              "eni-0d6be9634cae404fa"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ecr.dkr"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ecr.dkr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-060de2b3710607805",
            "dns_entry": [
              {
                "dns_name": "vpce-060de2b3710607805-gd7fu6sn.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-060de2b3710607805-gd7fu6sn-us-east-1c.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-060de2b3710607805-gd7fu6sn-us-east-1b.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-060de2b3710607805-gd7fu6sn-us-east-1a.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticloadbalancing.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0032623323V5N9WUGY88"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-060de2b3710607805",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-065459bae3f0b6f8a",
              "eni-0c9be5e84bcfb599d",
              "eni-0f3c499c038e1ad59"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-elasticloadbalancing"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-elasticloadbalancing"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-0e98a019dd9ecc364",
            "dns_entry": [
              {
                "dns_name": "vpce-0e98a019dd9ecc364-tu68277c.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e98a019dd9ecc364-tu68277c-us-east-1c.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e98a019dd9ecc364-tu68277c-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e98a019dd9ecc364-tu68277c-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z003035822E66XVGI0SIZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e98a019dd9ecc364",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04f5d6362886b4fd1",
              "eni-0579dfcf32a93dbf8",
              "eni-0fe4127184e3e828b"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-kms"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-kms"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-077087fc54730c82e",
            "dns_entry": [
              {
                "dns_name": "vpce-077087fc54730c82e-4tbr2omv.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-077087fc54730c82e-4tbr2omv-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-077087fc54730c82e-4tbr2omv-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-077087fc54730c82e-4tbr2omv-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00318572O7N9OBEQBFZO"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z00313951H9S3DOBQO8JN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-077087fc54730c82e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-034346f82eec35a50",
              "eni-07a05e4a482e3ba9d",
              "eni-095060e4f2adeb502"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-logs"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-logs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-0c28ab3974fb0172e",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0c28ab3974fb0172e",
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-029b8e92e6c9f7915",
              "rtb-062194879dea5bf37",
              "rtb-09c705f7c774aadd6"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-s3"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-s3"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-06401bb6f27bdfbc8",
            "dns_entry": [
              {
                "dns_name": "vpce-06401bb6f27bdfbc8-5uh4hjs9.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06401bb6f27bdfbc8-5uh4hjs9-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06401bb6f27bdfbc8-5uh4hjs9-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06401bb6f27bdfbc8-5uh4hjs9-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09575393KUA1BN6CH68Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06401bb6f27bdfbc8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ddc1ec22ab0d721",
              "eni-05021c0a5b4e37e60",
              "eni-0e27efcb6315426cc"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ssm"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ssm"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-049dd3842659c3d86",
            "dns_entry": [
              {
                "dns_name": "vpce-049dd3842659c3d86-qq3gy4ki.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049dd3842659c3d86-qq3gy4ki-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049dd3842659c3d86-qq3gy4ki-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049dd3842659c3d86-qq3gy4ki-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00318661DLMX7HBEFJ8W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-049dd3842659c3d86",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01121d3c671badd96",
              "eni-0ebe3f2df9335be03",
              "eni-0f081777c56beadaf"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ssmmessages"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-ssmmessages"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456869424076:vpc-endpoint/vpce-0b0413836bfd581cf",
            "dns_entry": [
              {
                "dns_name": "vpce-0b0413836bfd581cf-fcmjqtu2.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0413836bfd581cf-fcmjqtu2-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0413836bfd581cf-fcmjqtu2-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0413836bfd581cf-fcmjqtu2-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09571153DG71D8FIH86Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b0413836bfd581cf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001bc170a5b9f93ed",
              "eni-0558f87b80ab074ee",
              "eni-068bdd43eaede6980"
            ],
            "owner_id": "456869424076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0609919d7c97f45f0"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-00732b2df566fd6b5",
              "subnet-00eb67139d2c4b36d",
              "subnet-044af8b78d03f6c1d"
            ],
            "tags": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-sts"
            },
            "tags_all": {
              "Blueprint": "Digital-asset-collections",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "Digital-asset-collections-sts"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-084a3930bf1dcdb2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}